Added logging and requests tracking across micro services.

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -13,6 +13,10 @@
 
     <dependencies>
         <dependency>
+            <artifactId>kumuluzee-logs-log4j2</artifactId>
+            <groupId>com.kumuluz.ee.logs</groupId>
+        </dependency>
+        <dependency>
             <groupId>com.kumuluz.ee</groupId>
             <artifactId>kumuluzee-core</artifactId>
         </dependency>
@@ -20,7 +24,6 @@
             <groupId>com.kumuluz.ee</groupId>
             <artifactId>kumuluzee-servlet-jetty</artifactId>
         </dependency>
-
         <dependency>
             <groupId>si.fri.rso.albify</groupId>
             <artifactId>album-service-services</artifactId>
