--- a/api/src/main/resources/config.yaml
+++ b/api/src/main/resources/config.yaml
@@ -7,3 +7,30 @@ kumuluzee:
     base-url: http://localhost:8080
     http:
       port: 8080
+
+  logs:
+    # Change host and port to working current logit.io account.
+
+    # contextMap.applicationName: album-service-service && (marker.name: ENTRY || marker.name: EXIT)
+    # contextMap.applicationRequestId: 0b848a6d-1dd3-4389-9435-7d952db61107 && (marker.name: ENTRY || marker.name: EXIT)
+    # contextMap.method: getAlbumImages && (marker.name: ENTRY || marker.name: EXIT)
+
+    config-file: '<?xml version="1.0" encoding="UTF-8"?>
+                  <Configuration name="comments">
+                      <Appenders>
+                          <Console name="console" target="SYSTEM_OUT">
+                              <PatternLayout pattern="%d %p %marker %m %X %ex %n"/>
+                          </Console>
+                          <Socket name="logstash" host="d1f0637a-549a-4d7a-bccd-592061880d11-ls.logit.io"
+                          port="22085" protocol="udp">
+                              <JSONLayout complete="false" compact="true" eventEol="true" charset="UTF-8" properties="true"/>
+                          </Socket>
+                      </Appenders>
+                      <Loggers>
+                          <!-- Default logger -->
+                          <Root level="all">
+                              <AppenderRef ref="console" level="info" />
+                              <AppenderRef ref="logstash" level="trace" />
+                          </Root>
+                      </Loggers>
+                  </Configuration>'
