--- a/api/pom.xml
+++ b/api/pom.xml
@@ -21,6 +21,10 @@
             <artifactId>kumuluzee-core</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.kumuluz.ee.cors</groupId>
+            <artifactId>kumuluzee-cors</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.kumuluz.ee</groupId>
             <artifactId>kumuluzee-servlet-jetty</artifactId>
         </dependency>
