--- a/k8s/album-service-deployment.yaml
+++ b/k8s/album-service-deployment.yaml
@@ -33,7 +33,7 @@ kind: Service
 metadata:
   name: album-service
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
     - port: 8080
       protocol: TCP
